# SMASH-ROOT-analysis

./: .gitignore  CMakeLists.txt  README.md
input/: copy_src_and_input_files_to_build.sh  example_analysis_config.txt
src/: SMASH_config_info.cc  SMASH_config_info.h  basic_functions.cc  basic_functions.h  centrality.h  config.cc  config.h  constants.h  flow.cc  flow.h  flow_basic.cc  flow_basic.h  fourvector.h  main.cc  multiplicity.cc  multiplicity.h  plots.cc  plots.h  range.h  read_Particles.cc  read_Particles.h  yields.cc  yields.h
